<resources>
    <string name="app_name">LMS</string>
    <string name="title_home">Home</string>
    <string name="title_Category">Category</string>
    <string name="title_Courses">Courses</string>
    <string name="title_WishList">WishList</string>
    <string name="title_Account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_review">Recent Review</string>
</resources>