<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_Category" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_courses_black_24"
        android:title="@string/title_Courses" />
    <item
        android:id="@+id/navigation_wishList"
        android:icon="@drawable/ic_wishlist_black_24"
        android:title="@string/title_WishList" />
    <item
        android:id="@+id/navigation_Account"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/title_Account" />

</menu>