<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.techdsf.lms.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.techdsf.lms.ui.category.CategoryFragment"
        android:label="@string/title_Category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.techdsf.lms.ui.courses.CoursesFragment"
        android:label="@string/title_Courses"
        tools:layout="@layout/fragment_courses" />
    <fragment
        android:id="@+id/navigation_wishList"
        android:name="com.techdsf.lms.ui.wishlist.WishListFragment"
        android:label="@string/title_WishList"
        tools:layout="@layout/fragment_wishlist" />
    <fragment
        android:id="@+id/navigation_Account"
        android:name="com.techdsf.lms.ui.account.AccountFragment"
        android:label="@string/title_Account"
        tools:layout="@layout/fragment_account" />
</navigation>